package EJ29;

public class Producto {
  double precio;
  String nombre;

  public double getPrecio() {
    return precio;
  }
}
